1.9.1-SNAPSHOT Updating to JDK 21 compliance.